--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -110,7 +110,7 @@
       "type": "series",
       "name": "Rent-a-Girlfriend Season 4",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179344-bKIcCKDWDJdO.png",
-      "description": "Genres: Comedy, Romance\nTags:Male Protagonist/Heterosexual/Female Harem/Fake Relationship/Female Protagonist/Shounen/Unrequited Love/Primarily Adult Cast/Urban/Kaiju\nThe fourth season of <i> Kanojo, Okarishimasu</i>.<br><br>\nKazuya’s ready to confess with the lush paradise of Hawaii as a backdrop. But renting Chizuru for the dream trip turns into a war zone of love due to Ruka’s aggressive advances and Mami’s scheming. Despite the chaos, this is Kazuya’s moment to bare his heart. Will his words reach Chizuru? And if they do, what will she even say?\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Romance\nTags:Male Protagonist/Heterosexual/Female Harem/Fake Relationship/Female Protagonist/Shounen/Unrequited Love/Primarily Adult Cast/Urban/Kaiju\nThe fourth season of <i> Kanojo, Okarishimasu</i>.<br><br>\nKazuya’s ready to confess with the lush paradise of Hawaii as a backdrop. But renting Chizuru for the dream trip turns into a war zone of love due to Ruka’s aggressive advances and Mami’s scheming. Despite the chaos, this is Kazuya’s moment to bare his heart. Will his words reach Chizuru? And if they do, what will she even say?\n<br><br>\n(Source: Crunchyroll)\n<br><br>\n<i>Note: Kanojo, Okarishimasu 4th Season was streamed 4 days in advance of the TV broadcast on DMM TV, dAnimestore, and Crunchyroll beginning July 1, 2025. Regular broadcasting began on July 5, 2025.</i>"
     },
     {
       "id": "tt33472011",
@@ -253,13 +253,6 @@
       "description": "Genres: Comedy, Slice of Life\nTags:Seinen/Female Protagonist/Animals/Primarily Adult Cast/Urban\nOn a rainy day, Fuji meets a cute critter posing as a dog and offering an umbrella and a cue card that says, “Please take me home” and she can’t resist. With this dog-poster’s quirky charm and mysterious ways, life together becomes a heartwarming adventure of friendship and shared seasons.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt34754751",
-      "type": "series",
-      "name": "Hell Teacher: Jigoku Sensei Nube (2025)",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179678-1isykDVghv8Q.png",
-      "description": "Genres: Action, Comedy, Horror, Supernatural\nTags:Teacher/Youkai/Shounen/Demons/Exorcism/School/Primarily Child Cast\nA new anime project for <i>Jigoku Sensei Nube</i>.\n<br><br>\nThe story follows Meisuke Nueno, aka \"Nube,\" a psychic teacher with a demon hand, as he battles evil spirits and monsters to protect his students in this saga that employs elements of Japanese mythology and folklore to tell a fan-pleasing action story.\n<br><br>\nKnown for its occult and horror elements on school ghost stories and urban legends, Nube captivated readers across generations with his heroic efforts to save his students from supernatural threats."
-    },
-    {
       "id": "tt35652469",
       "type": "series",
       "name": "Betrothed to My Sister's Ex",
@@ -267,11 +260,11 @@
       "description": "Genres: Drama, Romance\nTags:Josei/Female Protagonist/Royal Affairs\nMarie, the second daughter of a poor baron’s household, is treated like a servant by her parents. Even at Marie’s birthday party, her beautiful elder sister, Anastasia, is the star. Outside, Marie bumps into Count Kyuros Granado, who falls for her at first sight. Yet, due to a misunderstanding, the Count proposes to Anastasia. After a tragic accident, Marie must marry the count instead!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt31435652",
+      "id": "tt34754751",
       "type": "series",
-      "name": "Nyaight of the Living Cat",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175124-eDYbn0W5F4to.jpg",
-      "description": "Genres: Horror\nTags:Pandemic/Post-Apocalyptic\nIn the near future, a unique disease has swept across the planet: a virus that transforms humans into cats! And the horde is expanding, since if these adorable kitties snuggle with a human, the human is transformed into yet another cat. A small group of cat-loving survivors is trying to escape the madness, but how can you defend yourself against a threat you just want to cuddle and pet?! This wild new take on a post-apocalyptic survival tale will make you roll over and purr with delight!\n<br><br>\n(Source: Seven Seas Entertainment)"
+      "name": "Hell Teacher: Jigoku Sensei Nube (2025)",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179678-1isykDVghv8Q.png",
+      "description": "Genres: Action, Comedy, Horror, Supernatural\nTags:Teacher/Youkai/Shounen/Demons/Exorcism/School/Primarily Child Cast\nA new anime project for <i>Jigoku Sensei Nube</i>.\n<br><br>\nThe story follows Meisuke Nueno, aka \"Nube,\" a psychic teacher with a demon hand, as he battles evil spirits and monsters to protect his students in this saga that employs elements of Japanese mythology and folklore to tell a fan-pleasing action story.\n<br><br>\nKnown for its occult and horror elements on school ghost stories and urban legends, Nube captivated readers across generations with his heroic efforts to save his students from supernatural threats."
     },
     {
       "id": "tt35652489",
@@ -279,6 +272,13 @@
       "name": "Cultural Exchange with a Game Centre Girl",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180794-rQGxkguEc2ov.png",
       "description": "Genres: Comedy, Romance\nTags:Heterosexual/Otaku Culture/Video Games\nKusakabe Renji, a young man working at a game centre, sees an English girl named Lily Baker playing a crane game on Valentine’s Day. Seeing her fail repeatedly to win a prize, Renji can’t help but take action. The day after Lily finally gets her plushie, Renji receives an unexpected message from her that reads, “Be my valentine!” What started as a misunderstanding leads to cultural exchange!\n<br><br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt31435652",
+      "type": "series",
+      "name": "Nyaight of the Living Cat",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175124-eDYbn0W5F4to.jpg",
+      "description": "Genres: Horror\nTags:Pandemic/Post-Apocalyptic\nIn the near future, a unique disease has swept across the planet: a virus that transforms humans into cats! And the horde is expanding, since if these adorable kitties snuggle with a human, the human is transformed into yet another cat. A small group of cat-loving survivors is trying to escape the madness, but how can you defend yourself against a threat you just want to cuddle and pet?! This wild new take on a post-apocalyptic survival tale will make you roll over and purr with delight!\n<br><br>\n(Source: Seven Seas Entertainment)"
     },
     {
       "id": "tt36988220",
@@ -302,18 +302,18 @@
       "description": "Genres: Drama, Fantasy, Romance\nTags:Magic/Female Harem/Male Protagonist\nAfter Allen failed the court sorcerer exam, he couldn’t return home even if he wanted to. While searching for a job, an unexpected offer comes his way to be the private tutor of the duke’s daughter. Just as he lowers his guard, he faces a girl who can’t use magic at all! But what is preventing her magic from working? Allen’s unconventional lessons gently shine a light on the girl’s future.<br>\n<br>\n(Source: Crunchyroll)<br><br>\n<i>Note: Each episode streamed 1 week early on ABEMA and dAnimeStore. The original TV broadcast started on July 6, 2025.</i>"
     },
     {
-      "id": "tt36074011",
-      "type": "series",
-      "name": "Turkey! Time to Strike",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx159483-2N0YcB9cWl3V.png",
-      "description": "Genres: Slice of Life, Sports\nTags:Bowling/Female Protagonist/Cute Girls Doing Cute Things/Primarily Female Cast\n\"Turkey\" is a bowling term for scoring three consecutive strikes.\n<br><br>\nMai, a second-year student and captain of the Ikkokukan High School Bowling Club, is a genius who can't seem to win a match. Whenever she scores a Turkey, she mysteriously follows it up with an unyielding split—the Snake Eyes.\n<br><br>\nOne day, Rina, the club’s only first-year member, confronts her \"You’re doing it on purpose, aren’t you?\"\n<br><br>\n\"You’re running away from winning. But I want to win. If you have no intention of winning, I’ll quit.\"\n<br><br>\n (Source: Official Site)"
-    },
-    {
       "id": "tt34710683",
       "type": "series",
       "name": "BULLET/BULLET",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx157960-IrnEWE1pvoT3.jpg",
       "description": "Genres: \nTags:Cars\nIn the near future, civilization has collapsed, and the world has become a wasteland. Despite their poverty, the people use remnants of past civilizations to lead resilient lives. Gear works in a junk shop while also retrieving stolen goods alongside Qu-0213, a robot with four personalities, and White Bear, a gambler. One day, Gear finds himself thrust into a once-in-a-lifetime job to steal an important item. They soon find themselves up against deadly assassins, heart- pounding car chases, and explosive battles. What Gear and his team do not know yet is that the item they stole holds a secret that could shake the very foundation of this world.\n<br><br>\n(Source: Disney+)"
+    },
+    {
+      "id": "tt36074011",
+      "type": "series",
+      "name": "Turkey! Time to Strike",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx159483-2N0YcB9cWl3V.png",
+      "description": "Genres: Slice of Life, Sports\nTags:Bowling/Female Protagonist/Cute Girls Doing Cute Things/Primarily Female Cast\n\"Turkey\" is a bowling term for scoring three consecutive strikes.\n<br><br>\nMai, a second-year student and captain of the Ikkokukan High School Bowling Club, is a genius who can't seem to win a match. Whenever she scores a Turkey, she mysteriously follows it up with an unyielding split—the Snake Eyes.\n<br><br>\nOne day, Rina, the club’s only first-year member, confronts her \"You’re doing it on purpose, aren’t you?\"\n<br><br>\n\"You’re running away from winning. But I want to win. If you have no intention of winning, I’ll quit.\"\n<br><br>\n (Source: Official Site)"
     },
     {
       "id": "tt30057076",
