--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -211,18 +211,18 @@
       "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Love Triangle/School/Female Harem/Kuudere/Yandere\nNaoto Watari lives solely for his little sister, Suzushiro, until his chaotic childhood friend, Satsuki, storms back into his life. Without uttering a single word, her very presence ignites buried memories and unravels his rigid routine. As tensions rise and secrets surface, Naoto’s devotion to Suzushiro clashes with unresolved pain, threatening to collapse his fragile world.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt36987898",
-      "type": "series",
-      "name": "Arknights: RISE FROM EMBER",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177175-uj13fUT8bqLD.jpg",
-      "description": "Genres: Action, Fantasy\nTags:Pandemic/Dystopian/Kemonomimi/Ensemble Cast/War\n\"She\" was supposed to be a beacon of hope. But now her anger and hatred have turned into flames of war and are about to engulf the people.\n<br><br>\nOnly Rhodes Island, a neutral organization, can stop Reunion's rampage and the conspiracy behind it. Amiya and the others head towards Chernobog's Core City, which is on a collision course with Lungmen. What fate awaits them there...\n<br><br>\n(Source: Official Site, translated, edited)"
-    },
-    {
       "id": "tt36592820",
       "type": "series",
       "name": "Scooped Up by an S-Rank Adventurer!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179885-m1nu1QvnRmII.jpg",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Male Protagonist/Magic/Dungeon\n<i>\"We don’t need a useless white mage.”</i>\n<br><br>\nLloyd is a white mage who was unexpectedly banished from the hero’s party. As he was lost and uncertain, he happened to cross paths with an S-rank adventurer party in need of a white mage, so he joined them on their quest. Little did anyone know at the time that the hero’s party would fall apart and Lloyd would rise to fame.\n<br><br>\nThis is a story about an unmatched support magic user, who believes himself to be ordinary, becoming an unstoppable adventurer.<br><br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt36987898",
+      "type": "series",
+      "name": "Arknights: RISE FROM EMBER",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177175-uj13fUT8bqLD.jpg",
+      "description": "Genres: Action, Fantasy\nTags:Pandemic/Dystopian/Kemonomimi/Ensemble Cast/War\n\"She\" was supposed to be a beacon of hope. But now her anger and hatred have turned into flames of war and are about to engulf the people.\n<br><br>\nOnly Rhodes Island, a neutral organization, can stop Reunion's rampage and the conspiracy behind it. Amiya and the others head towards Chernobog's Core City, which is on a collision course with Lungmen. What fate awaits them there...\n<br><br>\n(Source: Official Site, translated, edited)"
     },
     {
       "id": "tt35652446",
@@ -264,7 +264,7 @@
       "type": "series",
       "name": "Hell Teacher: Jigoku Sensei Nube (2025)",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179678-1isykDVghv8Q.png",
-      "description": "Genres: Action, Comedy, Horror, Supernatural\nTags:Teacher/Youkai/Shounen/Demons/Exorcism/School/Primarily Child Cast\nA new anime project for <i>Jigoku Sensei Nube</i>.\n<br><br>\nThe story follows Meisuke Nueno, aka \"Nube,\" a psychic teacher with a demon hand, as he battles evil spirits and monsters to protect his students in this saga that employs elements of Japanese mythology and folklore to tell a fan-pleasing action story.\n<br><br>\nKnown for its occult and horror elements on school ghost stories and urban legends, Nube captivated readers across generations with his heroic efforts to save his students from supernatural threats."
+      "description": "Genres: Action, Comedy, Horror, Supernatural\nTags:Teacher/Youkai/Demons/Exorcism/School/Shounen/Primarily Child Cast\nA new anime project for <i>Jigoku Sensei Nube</i>.\n<br><br>\nThe story follows Meisuke Nueno, aka \"Nube,\" a psychic teacher with a demon hand, as he battles evil spirits and monsters to protect his students in this saga that employs elements of Japanese mythology and folklore to tell a fan-pleasing action story.\n<br><br>\nKnown for its occult and horror elements on school ghost stories and urban legends, Nube captivated readers across generations with his heroic efforts to save his students from supernatural threats."
     },
     {
       "id": "tt35652489",
@@ -313,7 +313,7 @@
       "type": "series",
       "name": "Turkey! Time to Strike",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx159483-2N0YcB9cWl3V.png",
-      "description": "Genres: Slice of Life, Sports\nTags:Bowling/Female Protagonist/Cute Girls Doing Cute Things/Primarily Female Cast\n\"Turkey\" is a bowling term for scoring three consecutive strikes.\n<br><br>\nMai, a second-year student and captain of the Ikkokukan High School Bowling Club, is a genius who can't seem to win a match. Whenever she scores a Turkey, she mysteriously follows it up with an unyielding split—the Snake Eyes.\n<br><br>\nOne day, Rina, the club’s only first-year member, confronts her \"You’re doing it on purpose, aren’t you?\"\n<br><br>\n\"You’re running away from winning. But I want to win. If you have no intention of winning, I’ll quit.\"\n<br><br>\n (Source: Official Site)"
+      "description": "Genres: Slice of Life, Sports\nTags:Bowling/Female Protagonist/Cute Girls Doing Cute Things/Primarily Female Cast/School Club\n\"Turkey\" is a bowling term for scoring three consecutive strikes.\n<br><br>\nMai, a second-year student and captain of the Ikkokukan High School Bowling Club, is a genius who can't seem to win a match. Whenever she scores a Turkey, she mysteriously follows it up with an unyielding split—the Snake Eyes.\n<br><br>\nOne day, Rina, the club’s only first-year member, confronts her \"You’re doing it on purpose, aren’t you?\"\n<br><br>\n\"You’re running away from winning. But I want to win. If you have no intention of winning, I’ll quit.\"\n<br><br>\n (Source: Official Site)"
     },
     {
       "id": "tt30057076",
