--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -18,7 +18,7 @@
       "id": "tt21975436",
       "type": "series",
       "name": "Kaiju No. 8 Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178754-xQEHrJS6sKAA.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178754-Dgrub8xgC03M.jpg",
       "description": "Genres: Action, Sci-Fi\nTags:Kaiju/Monster Boy/Male Protagonist/Shounen/Shapeshifting/Military/Primarily Adult Cast/Urban Fantasy/Guns/Gore/Super Power/Swordplay/Work/Ojou-sama/Henshin/Tokusatsu/Slapstick/Heterosexual/Tsundere\nThe second season of <i>Kaijuu 8-gou</i>. <br><br>\n\nKafka must face new challenges, new Kaiju, and… a new Captain?! <br><br>\n\n(Source: KAIJU NO. 8 EN Twitter)"
     },
     {
@@ -82,7 +82,7 @@
       "type": "series",
       "name": "Grand Blue Dreaming Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182309-jJs8sdFmfv5q.jpg",
-      "description": "Genres: Comedy, Slice of Life, Sports\nTags:College/School Club/Scuba Diving/Seinen/Male Protagonist/Nudity/Coastal/Slapstick/Surreal Comedy\nThe second season of <i>Grand Blue</i>.<br><br>\n\nUniversity is back in session for Iori, and so are the booze-fueled parties! Between diving club shenanigans, a surprise from his sister, and wild tests of courage, normal college life is anything but. Dive back into the madness with Iori and his beloved crew of lively splash artists.<br><br>\n\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Slice of Life, Sports\nTags:College/School Club/Seinen/Male Protagonist/Scuba Diving/Slapstick/Nudity/Coastal/Surreal Comedy\nThe second season of <i>Grand Blue</i>.<br><br>\n\nUniversity is back in session for Iori, and so are the booze-fueled parties! Between diving club shenanigans, a surprise from his sister, and wild tests of courage, normal college life is anything but. Dive back into the madness with Iori and his beloved crew of lively splash artists.<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32524709",
@@ -152,7 +152,7 @@
       "type": "series",
       "name": "Takopi's Original Sin",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185407-K8o5pta80AU0.jpg",
-      "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Denpa/Bullying/Aliens/Female Protagonist/Shounen\nA Happy alien, Takopi, lands on Earth with one mission: to spread happiness! When he meets Shizuka, a lonely fourth grader, he vows to bring back her smile using his magical Happy Gadgets. But as he uncovers the pain in her life, Takopi learns that true happiness may require more than gadgets.\n<br><br>\n(Source: Crunchyroll)"
+      "description": "Genres: Drama, Psychological, Sci-Fi\nTags:Denpa/Bullying/Aliens/Female Protagonist/Shounen/Primarily Child Cast\nA Happy alien, Takopi, lands on Earth with one mission: to spread happiness! When he meets Shizuka, a lonely fourth grader, he vows to bring back her smile using his magical Happy Gadgets. But as he uncovers the pain in her life, Takopi learns that true happiness may require more than gadgets.\n<br><br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32731400",
@@ -201,7 +201,7 @@
       "type": "series",
       "name": "Dealing with Mikadono Sisters Is a Breeze",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178886-Q79QMeGQAJL7.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Shounen/Male Protagonist/Heterosexual/School/Tomboy\nThough Ayase Yuu is the son of a renowned and talented actress, he is below average in anything he does. He is entrusted to live under the care of his mother's friend and later discovers that he will also be rooming with the three sisters from his school who possess both beauty and talent. Though Yuu thought that an understanding would be impossible to reach between an ordinary person and those blessed with talent, the three sisters are surprisingly...?!"
+      "description": "Genres: Comedy, Romance\nTags:Shounen/Male Protagonist/Heterosexual/School/Tomboy/Femboy\nThough Ayase Yuu is the son of a renowned and talented actress, he is below average in anything he does. He is entrusted to live under the care of his mother's friend and later discovers that he will also be rooming with the three sisters from his school who possess both beauty and talent. Though Yuu thought that an understanding would be impossible to reach between an ordinary person and those blessed with talent, the three sisters are surprisingly...?!"
     },
     {
       "id": "tt32535912",
@@ -222,7 +222,7 @@
       "type": "series",
       "name": "Arknights: RISE FROM EMBER",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177175-uj13fUT8bqLD.jpg",
-      "description": "Genres: Action, Fantasy\nTags:Pandemic/Dystopian/Kemonomimi/Ensemble Cast/War\n\"She\" was supposed to be a beacon of hope. But now her anger and hatred have turned into flames of war and are about to engulf the people.\n<br><br>\nOnly Rhodes Island, a neutral organization, can stop Reunion's rampage and the conspiracy behind it. Amiya and the others head towards Chernobog's Core City, which is on a collision course with Lungmen. What fate awaits them there...\n<br><br>\n(Source: Official Site, translated, edited)"
+      "description": "Genres: Action, Fantasy\nTags:Pandemic/Dystopian/War/Kemonomimi/Ensemble Cast\n\"She\" was supposed to be a beacon of hope. But now her anger and hatred have turned into flames of war and are about to engulf the people.\n<br><br>\nOnly Rhodes Island, a neutral organization, can stop Reunion's rampage and the conspiracy behind it. Amiya and the others head towards Chernobog's Core City, which is on a collision course with Lungmen. What fate awaits them there...\n<br><br>\n(Source: Official Site, translated, edited)"
     },
     {
       "id": "tt35652446",
@@ -274,18 +274,18 @@
       "description": "Genres: Comedy, Romance\nTags:Heterosexual/Otaku Culture/Video Games\nKusakabe Renji, a young man working at a game centre, sees an English girl named Lily Baker playing a crane game on Valentine’s Day. Seeing her fail repeatedly to win a prize, Renji can’t help but take action. The day after Lily finally gets her plushie, Renji receives an unexpected message from her that reads, “Be my valentine!” What started as a misunderstanding leads to cultural exchange!\n<br><br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt31435652",
-      "type": "series",
-      "name": "Nyaight of the Living Cat",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175124-eDYbn0W5F4to.jpg",
-      "description": "Genres: Horror\nTags:Pandemic/Post-Apocalyptic\nIn the near future, a unique disease has swept across the planet: a virus that transforms humans into cats! And the horde is expanding, since if these adorable kitties snuggle with a human, the human is transformed into yet another cat. A small group of cat-loving survivors is trying to escape the madness, but how can you defend yourself against a threat you just want to cuddle and pet?! This wild new take on a post-apocalyptic survival tale will make you roll over and purr with delight!\n<br><br>\n(Source: Seven Seas Entertainment)"
-    },
-    {
       "id": "tt36988220",
       "type": "series",
       "name": "Detectives These Days Are Crazy!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180460-rZn4pp9YNqW0.jpg",
       "description": "Genres: Comedy, Mystery\nTags:Detective/Surreal Comedy/Seinen/Police/Crime/Ensemble Cast/Primarily Adult Cast/Urban\nNagumo Keiichirou was a genius high-school detective. No case was complex enough for him. But what happens to genius detectives when they get older?<br>\n<br>\nNow 35, with bad hips, running a failing detective agency with no cases to solve and struggling to pay the rent, he's at a dead end.<br>\n<br>\nIn comes a high school girl in his office who says she wants to work with him. With her help, will the out-of-touch, old-fashioned Nagumo get back the fire of his youth?<br>"
+    },
+    {
+      "id": "tt31435652",
+      "type": "series",
+      "name": "Nyaight of the Living Cat",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175124-eDYbn0W5F4to.jpg",
+      "description": "Genres: Horror\nTags:Pandemic/Post-Apocalyptic\nIn the near future, a unique disease has swept across the planet: a virus that transforms humans into cats! And the horde is expanding, since if these adorable kitties snuggle with a human, the human is transformed into yet another cat. A small group of cat-loving survivors is trying to escape the madness, but how can you defend yourself against a threat you just want to cuddle and pet?! This wild new take on a post-apocalyptic survival tale will make you roll over and purr with delight!\n<br><br>\n(Source: Seven Seas Entertainment)"
     },
     {
       "id": "tt36082234",
@@ -316,6 +316,13 @@
       "description": "Genres: Slice of Life, Sports\nTags:Bowling/Female Protagonist/Cute Girls Doing Cute Things/Primarily Female Cast/School Club\n\"Turkey\" is a bowling term for scoring three consecutive strikes.\n<br><br>\nMai, a second-year student and captain of the Ikkokukan High School Bowling Club, is a genius who can't seem to win a match. Whenever she scores a Turkey, she mysteriously follows it up with an unyielding split—the Snake Eyes.\n<br><br>\nOne day, Rina, the club’s only first-year member, confronts her \"You’re doing it on purpose, aren’t you?\"\n<br><br>\n\"You’re running away from winning. But I want to win. If you have no intention of winning, I’ll quit.\"\n<br><br>\n (Source: Official Site)"
     },
     {
+      "id": "tt37205655",
+      "type": "series",
+      "name": "Nukitashi THE ANIMATION",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174188-fZg8iePD9Dca.jpg",
+      "description": "Genres: Action, Comedy, Drama, Ecchi, Romance\nTags:Nudity/Coastal/Primarily Teen Cast/Male Protagonist/School/Primarily Female Cast\nThe island of the everlasting summer, Seiran Island.\n<br><br>\n\"Junnosuke Tachibana, whose family home was on this island, returned to it with his sister, Asane Tachibana, after the death of their parents.\"\n<br><br>\nHowever, Seiran Island has become a place of madness due to the implementation of the “Perverted Law,” a law designed to combat population decline. This law permits and even encourages lewd sex acts everywhere on the island, and refusing to engage in “reproductive activities” is punished almost as severely as a crime.\n<br><br>\nJunnosuke, a proud virgin and staunch defender of virginity, questions the legitimacy of this law. Determined to protect both his and his beloved sister’s purity, he forms the anti-copulation front NLNS (No Love No Sex) and sets out to destroy the Perveted Law once and for all.\n<br><br>\n“I’ll… destroy the Perverted Law!”\n<br><br>\n(Source: Official Site, translated)\n<br><br>\n<i>Note: Prior to the TV broadcast, a special pre-release screening titled “Nukitashi THE ANIMATION – Seiranjima Special ver. Pre-release Screening Event” was held on June 22, 2025 at Cinem@rt Shinjuku in Tokyo. It featured episodes 1-3.</i>"
+    },
+    {
       "id": "tt30057076",
       "type": "series",
       "name": "Welcome to the Outcast's Restaurant!",
@@ -328,13 +335,6 @@
       "name": "The Shy Hero and the Assassin Princesses",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186561-svLOWbfahG5V.png",
       "description": "Genres: Action, Comedy, Fantasy\nTags:Female Harem/Medieval\nHero Toto possesses great skills, but his extreme shyness has left him unable to form a party, causing him to remain stuck in the town where his journey began.\n<br><br>\nOne day, he is suddenly invited to join a party by three beautiful women—Ciel, Anemone, and Gore. Overjoyed at finally setting off on an adventure, Toto is filled with excitement... but little does he know, these women are dead set on killing him!\n<br><br>\nA deathly harem romcom unfolds as the socially anxious hero, who faints from mere flustered excitement around women, finds himself the target of three deadly companions, each with their own reasons for wanting him gone!\n<br><br>\n<i>Note: Each episode streamed 1 week early on ABEMA. The original TV broadcast started on July 12th 2025.<i>"
-    },
-    {
-      "id": "tt37205655",
-      "type": "series",
-      "name": "Nukitashi THE ANIMATION",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx174188-fZg8iePD9Dca.jpg",
-      "description": "Genres: Action, Comedy, Drama, Ecchi, Romance\nTags:Nudity/Coastal/Primarily Teen Cast/Male Protagonist/School/Primarily Female Cast\nThe island of the everlasting summer, Seiran Island.\n<br><br>\n\"Junnosuke Tachibana, whose family home was on this island, returned to it with his sister, Asane Tachibana, after the death of their parents.\"\n<br><br>\nHowever, Seiran Island has become a place of madness due to the implementation of the “Perverted Law,” a law designed to combat population decline. This law permits and even encourages lewd sex acts everywhere on the island, and refusing to engage in “reproductive activities” is punished almost as severely as a crime.\n<br><br>\nJunnosuke, a proud virgin and staunch defender of virginity, questions the legitimacy of this law. Determined to protect both his and his beloved sister’s purity, he forms the anti-copulation front NLNS (No Love No Sex) and sets out to destroy the Perveted Law once and for all.\n<br><br>\n“I’ll… destroy the Perverted Law!”\n<br><br>\n(Source: Official Site, translated)\n<br><br>\n<i>Note: Prior to the TV broadcast, a special pre-release screening titled “Nukitashi THE ANIMATION – Seiranjima Special ver. Pre-release Screening Event” was held on June 22, 2025 at Cinem@rt Shinjuku in Tokyo. It featured episodes 1-3.</i>"
     },
     {
       "id": "tt35995459",
